fix(sbb-footer): align clock to right on wide and ultra breakpoints (#1561)

--- a/src/components/sbb-footer/sbb-footer.scss
+++ b/src/components/sbb-footer/sbb-footer.scss
@@ -83,7 +83,7 @@
       grid-row: 1;
       grid-column: 4 / 5;
       width: 100%;
-      justify-self: start;
+      justify-self: end;
     }
   }
 
